# claude-promtp-to-code

./: .env.example  .gitignore  Dockerfile  Makefile  PROMPT.md  README.md  SECURITY_ASSESSMENT.md  docker-compose.yml  pyproject.toml  test_tokens.env
conf.d/: postgres.yaml
docs/: AUTHENTICATION.md  DATABASE_MONITORING.md  README.md  c4-diagrams.md
docs/diagrams/: c1-system-context.mmd  c2-container.mmd  c3-component.mmd  data-flow.mmd  deployment.mmd  security-architecture.mmd
load-testing/: .env.example  Dockerfile  README.md  __init__.py  banking_api_tasks.py  config.py  data_generators.py  docker-compose.locust.yml  locustfile.py  payment_service_tasks.py  requirements.txt
load-testing/scripts/: run_tests.sh
scripts/: generate_auth_tokens.py  generate_diagrams.sh  init_db.sql  mockserver-config.json  postgresql_custom.conf  run-load-tests.sh  setup_dbm.sql  test_api.sh  test_log_collection.py  test_trace_correlation.py
src/payment_service/: __init__.py  config.py  main.py
src/payment_service/api/: __init__.py  routes.py
src/payment_service/database/: __init__.py  connection.py
src/payment_service/models/: __init__.py  payment.py
src/payment_service/services/: banking_service.py  cache_service.py  encryption_service.py  event_service.py  payment_service.py
src/payment_service/utils/: __init__.py  datadog_integration.py  exceptions.py  logging.py  monitoring.py  security.py
terraform/: README.md  main.tf  terraform.tfvars.example  versions.tf
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_services.py
